<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PuntoGPSVoz</string>
    <string name="tutorial">Pulsa el boton longitud para decir la longitud a registrar y pulsa el boton latitud para decir la latitud. Cuando este las dos coordenadas se lanzará la navegación </string>
    <string name="longitud">Longitud</string>
    <string name="latitud">Latitud</string>
     <string name="action_settings">Settings</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="compassDescription">Compass</string>
    <string name="go">Go!</string>
    <string name="Distance">Distancia</string>

</resources>